Remove omitempty from some fields
